# tancodrom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Fragment Shaders/: ShadowMapping.fs  skybox.fs
Headers/: Building.h  Camera.h  CinematicHandler.h  ECameraMovementType.h  Helicopter.h  InputManager.h  Light.h  LightSource.h  Mesh.h  Model.h  Moon.h  POV.h  Particles.h  Program.h  Projectile.h  Scene.h  SceneObject.h  Shader.h  Skybox.h  SoundManager.h  Sun.h  Tank.h  Terrain.h  Texture.h  Wall.h
Models/BuildingDamaged/: buildingdamaged.mtl
Models/BuildingNormal/: buildingnormal.mtl
Models/BuildingSecondary/Corner1/: corner1.mtl
Models/BuildingSecondary/SimpleBlue/: simpleblue.mtl
Models/Moon/: Moon.mtl
Models/Skybox/: Skybox - Copy.mtl  Skybox.mtl
Models/SkyboxClose/: skybox.mtl
Models/SkyboxNew/: Skybox.mtl  SkyboxOnlyUp.mtl
Models/TerrainStretch/: Terrain.mtl  TerrainScaled.mtl
Models/Trailer/: trailer.mtl
SMMG3D - Tancodrom/: SMMG3D - Tancodrom.sln
SMMG3D - Tancodrom/SMMG3D - Tancodrom/: Camera.cpp  Camera.h  Helicopter.cpp  Helicopter.h  InputManager.cpp  InputManager.h  LightSource.cpp  LightSource.h  Mesh.h  Model.cpp  Model.h  Moon.cpp  Moon.h  POV.h  PhongLight.fs  Program.cpp  Program.h  Projectile.cpp  SMMG3D - Tancodrom.cpp  SMMG3D - Tancodrom.vcxproj  SMMG3D - Tancodrom.vcxproj.filters  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  ShadowMapping.fs  Skybox.cpp  Sun.cpp  Sun.h  Tank.cpp  Tank.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  Vertex.h
Sources/: Building.cpp  Camera.cpp  CinematicHandler.cpp  Helicopter.cpp  InputManager.cpp  Light.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Moon.cpp  Program.cpp  Projectile.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  Skybox.cpp  SoundManager.cpp  Sun.cpp  Tank.cpp  Terrain.cpp  Texture.cpp  Wall.cpp  main.cpp
Vertex Shaders/: ShadowMapping.vs
(+38 files in other folders)
